--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,16 +152,16 @@ jobs:
             dist
             packages
 
-  scanning:
-    name: Test GitHub secret action
+  test_github_secret_scan_action:
+    name: Test GitHub action for `secret scan`
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Scan commits
-        uses: ./actions/secret
+      - name: Scan commits for hardcoded secrets
+        uses: ./actions-unstable/secret
         env:
           GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
           GITHUB_PUSH_BASE_SHA: ${{ github.event.base }}
@@ -169,12 +169,31 @@ jobs:
           GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
+          GITGUARDIAN_GGSHIELD_REF: ${{ github.ref }}
+
+  test_github_iac_scan_action:
+    name: Test GitHub action for `iac scan`
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Scan commits for IaC vulnerabilities
+        uses: ./actions-unstable/iac
+        with:
+          args: .
+        env:
+          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+          GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
+          GITGUARDIAN_GGSHIELD_REF: ${{ github.ref }}
 
   dockerhub-unstable:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: [lint, build, scanning]
+    needs:
+      [lint, build, test_github_iac_scan_action, test_github_secret_scan_action]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -190,7 +209,8 @@ jobs:
     name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: [lint, build, scanning]
+    needs:
+      [lint, build, test_github_iac_scan_action, test_github_secret_scan_action]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
